updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <head>
     <meta charset="utf-8">
     <Title>Landing Page</Title>
+    <nav>
+      <ul>
+        <li>LOGO</li>
+      </ul>  
+    </nav>
+
   </head>
 
   <body>
